<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="600dp"
                >

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textColor="@color/emerald"
                    android:textSize="60sp"
                    app:layout_constraintBottom_toTopOf="@+id/start_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.382" />

                <Button
                    android:id="@+id/start_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@color/emerald"
                    android:textColor="@color/black"
                    android:text="@string/game_start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/poem_text"
                    app:layout_constraintVertical_bias="0.8" />

                <TextView
                    android:id="@+id/version_text"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/version"
                    android:textColor="@color/main_text"
                    app:layout_constraintTop_toBottomOf="@id/title_text" />

                <TextView
                    android:id="@+id/poem_text"
                    android:layout_width="match_parent"
                    android:layout_height="161dp"
                    android:gravity="center"
                    android:text="@string/poem"
                    android:textSize="24sp"
                    android:textColor="@color/main_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/version_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/look_back"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:background="@color/emerald_soft"
                android:layout_marginTop="80dp"
                />

            <LinearLayout
                android:id="@+id/history_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>